--- a/whiteboard.ipynb
+++ b/whiteboard.ipynb
@@ -1,9 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original dictionary is : {'Gfg': <function sum_key at 0x7fc5a5105fc0>, 'is': 5, 'best': 9}\n",
+      "The required call result : 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python3 code to demonstrate working of\n",
+    "# Functions as dictionary values\n",
+    "# Using With params\n",
+    "\n",
+    "# call Gfg fnc\n",
+    "def sum_key(a, b):\n",
+    "  return a + b\n",
+    "\n",
+    "# initializing dictionary\n",
+    "# check for function name as key\n",
+    "test_dict = {\"Gfg\": sum_key, \"is\" : 5, \"best\" : 9}\n",
+    "\n",
+    "# printing original dictionary\n",
+    "print(\"The original dictionary is : \" + str(test_dict))\n",
+    "\n",
+    "# calling function using brackets\n",
+    "# params inside brackets\n",
+    "res = test_dict['Gfg'](10, 34)\n",
+    "\n",
+    "# printing result\n",
+    "print(\"The required call result : \" + str(res))\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,9 +71,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../data/bybit/ETH_USDT-5m.json\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1616716800000</td>\n",
+       "      <td>1588.45</td>\n",
+       "      <td>1604.35</td>\n",
+       "      <td>1588.05</td>\n",
+       "      <td>1604.35</td>\n",
+       "      <td>310.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1616717100000</td>\n",
+       "      <td>1604.35</td>\n",
+       "      <td>1606.35</td>\n",
+       "      <td>1601.25</td>\n",
+       "      <td>1605.00</td>\n",
+       "      <td>424.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1616717400000</td>\n",
+       "      <td>1605.00</td>\n",
+       "      <td>1609.10</td>\n",
+       "      <td>1605.00</td>\n",
+       "      <td>1606.05</td>\n",
+       "      <td>95.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1616717700000</td>\n",
+       "      <td>1606.05</td>\n",
+       "      <td>1610.85</td>\n",
+       "      <td>1602.40</td>\n",
+       "      <td>1607.85</td>\n",
+       "      <td>196.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1616718000000</td>\n",
+       "      <td>1607.85</td>\n",
+       "      <td>1611.35</td>\n",
+       "      <td>1606.20</td>\n",
+       "      <td>1609.00</td>\n",
+       "      <td>99.12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0        1        2        3        4       5\n",
+       "0  1616716800000  1588.45  1604.35  1588.05  1604.35  310.05\n",
+       "1  1616717100000  1604.35  1606.35  1601.25  1605.00  424.53\n",
+       "2  1616717400000  1605.00  1609.10  1605.00  1606.05   95.67\n",
+       "3  1616717700000  1606.05  1610.85  1602.40  1607.85  196.46\n",
+       "4  1616718000000  1607.85  1611.35  1606.20  1609.00   99.12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Test Data ##\n",
     "base_cur = \"USDT\"\n",
