--- a/whiteboard.ipynb
+++ b/whiteboard.ipynb
@@ -188,7 +188,8 @@
     "df = pd.read_json(jsonfile)\n",
     "df.head()\n",
     "#df = df[-500:-2]\n",
-    "#df.columns = ['timestamp','open','high','low','close','volume']\n",
+    "df.columns = ['timestamp','open','high','low','close','volume']\n",
+    "print(f\"type: {df}\")\n",
     "#df['timestamp'] = pd.to_datetime(df['timestamp'], unit='ms')\n",
     "#df['trade'] = 'no_trade'\n",
     "#trades = pd.DataFrame(columns=['time', 'leverage', 'fees', 'side', 'stake', 'entry_price', 'exit_price', 'percent_difference', 'PNL', 'entry_reason', 'exit_reason', 'entry_balance', 'exit_balance', 'status'])\n",
@@ -326,7 +327,11 @@
     "            for ord in my_order:\n",
     "                if ord['order_status'] != 'Filled' and ord['order_status'] != 'Deactivated': conditionals.append(ord)\n",
     "    return conditionals\n",
-    "#print(GetConditionalOrders())\n"
+    "#print(GetConditionalOrders())\n",
+    "\n",
+    "def GetCandles(symbol: str = \"DOGEUSDT\", start: float = 0.0, end: float = 0.0, ):\n",
+    "    '''Get Candles'''\n",
+    "    return\n"
    ]
   }
  ],
