--- a/whiteboard.ipynb
+++ b/whiteboard.ipynb
@@ -71,14 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../data/bybit/ETH_USDT-5m.json\n"
+      "../../data/bybit/ETH_USDT-5m.json\n",
+      "type: <class 'numpy.int64'>\n"
      ]
     },
     {
@@ -102,74 +103,114 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1616716800000</td>\n",
-       "      <td>1588.45</td>\n",
-       "      <td>1604.35</td>\n",
-       "      <td>1588.05</td>\n",
-       "      <td>1604.35</td>\n",
-       "      <td>310.05</td>\n",
+       "      <th>count</th>\n",
+       "      <td>1.053910e+05</td>\n",
+       "      <td>105391.000000</td>\n",
+       "      <td>105391.000000</td>\n",
+       "      <td>105391.000000</td>\n",
+       "      <td>105391.000000</td>\n",
+       "      <td>105391.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1616717100000</td>\n",
-       "      <td>1604.35</td>\n",
-       "      <td>1606.35</td>\n",
-       "      <td>1601.25</td>\n",
-       "      <td>1605.00</td>\n",
-       "      <td>424.53</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.632525e+12</td>\n",
+       "      <td>3091.385744</td>\n",
+       "      <td>3096.765969</td>\n",
+       "      <td>3085.952064</td>\n",
+       "      <td>3091.400461</td>\n",
+       "      <td>629.167946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1616717400000</td>\n",
-       "      <td>1605.00</td>\n",
-       "      <td>1609.10</td>\n",
-       "      <td>1605.00</td>\n",
-       "      <td>1606.05</td>\n",
-       "      <td>95.67</td>\n",
+       "      <th>std</th>\n",
+       "      <td>9.127172e+09</td>\n",
+       "      <td>773.890105</td>\n",
+       "      <td>774.344558</td>\n",
+       "      <td>773.370012</td>\n",
+       "      <td>773.876258</td>\n",
+       "      <td>1226.082748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1616717700000</td>\n",
-       "      <td>1606.05</td>\n",
-       "      <td>1610.85</td>\n",
-       "      <td>1602.40</td>\n",
-       "      <td>1607.85</td>\n",
-       "      <td>196.46</td>\n",
+       "      <th>min</th>\n",
+       "      <td>1.616717e+12</td>\n",
+       "      <td>1588.450000</td>\n",
+       "      <td>1604.350000</td>\n",
+       "      <td>1588.050000</td>\n",
+       "      <td>1604.350000</td>\n",
+       "      <td>0.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1616718000000</td>\n",
-       "      <td>1607.85</td>\n",
-       "      <td>1611.35</td>\n",
-       "      <td>1606.20</td>\n",
-       "      <td>1609.00</td>\n",
-       "      <td>99.12</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.624621e+12</td>\n",
+       "      <td>2478.625000</td>\n",
+       "      <td>2484.075000</td>\n",
+       "      <td>2472.550000</td>\n",
+       "      <td>2478.650000</td>\n",
+       "      <td>183.885000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.632525e+12</td>\n",
+       "      <td>3029.650000</td>\n",
+       "      <td>3036.500000</td>\n",
+       "      <td>3025.000000</td>\n",
+       "      <td>3029.700000</td>\n",
+       "      <td>355.490000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.640430e+12</td>\n",
+       "      <td>3752.800000</td>\n",
+       "      <td>3758.250000</td>\n",
+       "      <td>3748.075000</td>\n",
+       "      <td>3752.800000</td>\n",
+       "      <td>697.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.648334e+12</td>\n",
+       "      <td>4868.150000</td>\n",
+       "      <td>4878.350000</td>\n",
+       "      <td>4853.850000</td>\n",
+       "      <td>4868.150000</td>\n",
+       "      <td>107186.390000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               0        1        2        3        4       5\n",
-       "0  1616716800000  1588.45  1604.35  1588.05  1604.35  310.05\n",
-       "1  1616717100000  1604.35  1606.35  1601.25  1605.00  424.53\n",
-       "2  1616717400000  1605.00  1609.10  1605.00  1606.05   95.67\n",
-       "3  1616717700000  1606.05  1610.85  1602.40  1607.85  196.46\n",
-       "4  1616718000000  1607.85  1611.35  1606.20  1609.00   99.12"
+       "          timestamp           open           high            low  \\\n",
+       "count  1.053910e+05  105391.000000  105391.000000  105391.000000   \n",
+       "mean   1.632525e+12    3091.385744    3096.765969    3085.952064   \n",
+       "std    9.127172e+09     773.890105     774.344558     773.370012   \n",
+       "min    1.616717e+12    1588.450000    1604.350000    1588.050000   \n",
+       "25%    1.624621e+12    2478.625000    2484.075000    2472.550000   \n",
+       "50%    1.632525e+12    3029.650000    3036.500000    3025.000000   \n",
+       "75%    1.640430e+12    3752.800000    3758.250000    3748.075000   \n",
+       "max    1.648334e+12    4868.150000    4878.350000    4853.850000   \n",
+       "\n",
+       "               close         volume  \n",
+       "count  105391.000000  105391.000000  \n",
+       "mean     3091.400461     629.167946  \n",
+       "std       773.876258    1226.082748  \n",
+       "min      1604.350000       0.850000  \n",
+       "25%      2478.650000     183.885000  \n",
+       "50%      3029.700000     355.490000  \n",
+       "75%      3752.800000     697.800000  \n",
+       "max      4868.150000  107186.390000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,12 +230,13 @@
     "df.head()\n",
     "#df = df[-500:-2]\n",
     "df.columns = ['timestamp','open','high','low','close','volume']\n",
-    "print(f\"type: {df}\")\n",
+    "print(f\"type: {type(df['timestamp'][0])}\")\n",
     "#df['timestamp'] = pd.to_datetime(df['timestamp'], unit='ms')\n",
     "#df['trade'] = 'no_trade'\n",
     "#trades = pd.DataFrame(columns=['time', 'leverage', 'fees', 'side', 'stake', 'entry_price', 'exit_price', 'percent_difference', 'PNL', 'entry_reason', 'exit_reason', 'entry_balance', 'exit_balance', 'status'])\n",
     "#superTrend(df, multiplier=5, period=9)\n",
-    "#df_backup = df.copy()\n"
+    "#df_backup = df.copy()\n",
+    "df.describe()"
    ]
   },
   {
@@ -329,7 +371,7 @@
     "    return conditionals\n",
     "#print(GetConditionalOrders())\n",
     "\n",
-    "def GetCandles(symbol: str = \"DOGEUSDT\", start: float = 0.0, end: float = 0.0, ):\n",
+    "def GetCandles(symbol: str = \"DOGEUSDT\", timeframe='5min', start: float = 0.0, end: float = 0.0):\n",
     "    '''Get Candles'''\n",
     "    return\n"
    ]
