--- a/whiteboard_2.ipynb
+++ b/whiteboard_2.ipynb
@@ -2,47 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yay\n",
+      "start 2022-07-08 00:00:00:1657234800.0\n",
+      "finish 2022-07-10 00:00:00:1657407600.0\n"
+     ]
+    }
+   ],
    "source": [
-    "## SETUP ##\n",
+    "from time import mktime\n",
+    "from Utilities import GetOCHLV, TimeFormat\n",
+    "from time import mktime\n",
+    "from datetime import datetime as date_time\n",
     "\n",
-    "import ccxt\n",
-    "from Values import BYBIT_API_KEY, BYBIT_API_SECRET, OHLCV_DIR\n",
-    "import pandas as pd\n",
-    "from Utilities import *\n",
-    "import warnings\n",
-    "from pybit import usdt_perpetual\n",
-    "\n",
-    "pybit_auth = usdt_perpetual.HTTP(\n",
-    "    endpoint=\"https://api.bybit.com\",\n",
-    "    api_key=BYBIT_API_KEY,\n",
-    "    api_secret=BYBIT_API_SECRET\n",
-    ")\n",
-    "\n",
-    "# Switch Logging off and on\n",
-    "debugLog = True\n",
-    "\n",
-    "warnings.simplefilter(action='ignore')\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "\n",
-    "bybit = ccxt.bybit({'apiKey': BYBIT_API_KEY, 'secret': BYBIT_API_SECRET})\n",
-    "data_dir = OHLCV_DIR\n",
-    "\n",
-    "\n",
-    "## Test OHLCV data ##\n",
     "base_cur = \"USDT\"\n",
     "exch_cur = \"DOGE\"\n",
     "symbol = '_'.join([exch_cur, base_cur])\n",
-    "timeframe = \"5m\"\n",
-    "maxCandles = 264\n",
-    "runUpCandles = 0\n",
-    "jsonfile = f\"{data_dir}{symbol}-{timeframe}.json\"\n",
-    "print(jsonfile)\n",
-    "df = pd.read_json(jsonfile)\n",
-    "df = df.head(maxCandles)\n",
-    "print(df)\n"
+    "\n",
+    "# Seconds in certain timeframe\n",
+    "TSTAMP_1_MIN = 60.0\n",
+    "TSTAMP_5_MIN = 300.0\n",
+    "TSTAMP_10_MIN = 600.0\n",
+    "TSTAMP_15_MIN = 900.0\n",
+    "TSTAMP_20_MIN = 1200.0\n",
+    "TSTAMP_30_MIN = 1800.0\n",
+    "TSTAMP_45_MIN = 2700.0\n",
+    "TSTAMP_1_HOUR = 3600.0\n",
+    "TSTAMP_1_DAY = 86400.0\n",
+    "TSTAMP_1_WEEK = 604800\n",
+    "\n",
+    "# No time specified\n",
+    "sTime = date_time(2022,7,8)\n",
+    "eTime = date_time(2022,7,9)\n",
+    "\n",
+    "sTstamp = mktime(sTime.timetuple()) # start of start day\n",
+    "eTstamp = mktime(eTime.timetuple()) + TSTAMP_1_DAY # end of end day\n",
+    "\n",
+    "print(f\"start {date_time.fromtimestamp(sTstamp)}:{sTstamp}\")\n",
+    "print(f\"finish {date_time.fromtimestamp(eTstamp)}:{eTstamp}\")\n",
+    "GetOCHLV(symbol=symbol, timeframe='5m', start=sTstamp, end=eTstamp)"
    ]
   }
  ],
