--- a/whiteboard_2.ipynb
+++ b/whiteboard_2.ipynb
@@ -9,9 +9,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yay\n",
-      "start 2022-07-08 00:00:00:1657234800.0\n",
-      "finish 2022-07-10 00:00:00:1657407600.0\n"
+      "864.0\n",
+      "./data/bybit//DOGEUSDT-5m.json\n",
+      "No File Exists\n",
+      "200\n"
      ]
     }
    ],
@@ -23,7 +24,7 @@
     "\n",
     "base_cur = \"USDT\"\n",
     "exch_cur = \"DOGE\"\n",
-    "symbol = '_'.join([exch_cur, base_cur])\n",
+    "symbol = ''.join([exch_cur, base_cur])\n",
     "\n",
     "# Seconds in certain timeframe\n",
     "TSTAMP_1_MIN = 60.0\n",
@@ -38,15 +39,15 @@
     "TSTAMP_1_WEEK = 604800\n",
     "\n",
     "# No time specified\n",
-    "sTime = date_time(2022,7,8)\n",
+    "sTime = date_time(2022,7,7)\n",
     "eTime = date_time(2022,7,9)\n",
     "\n",
     "sTstamp = mktime(sTime.timetuple()) # start of start day\n",
     "eTstamp = mktime(eTime.timetuple()) + TSTAMP_1_DAY # end of end day\n",
-    "\n",
-    "print(f\"start {date_time.fromtimestamp(sTstamp)}:{sTstamp}\")\n",
-    "print(f\"finish {date_time.fromtimestamp(eTstamp)}:{eTstamp}\")\n",
-    "GetOCHLV(symbol=symbol, timeframe='5m', start=sTstamp, end=eTstamp)"
+    "print(f\"{((eTstamp-sTstamp)/60)/5}\")\n",
+    "#print(f\"start {date_time.fromtimestamp(sTstamp)}:{sTstamp}\")\n",
+    "#print(f\"finish {date_time.fromtimestamp(eTstamp)}:{eTstamp}\")\n",
+    "print(len(GetOCHLV(symbol=symbol, timeframe='5m', start=sTstamp, end=eTstamp)))"
    ]
   }
  ],
