--- a/whiteboard.ipynb
+++ b/whiteboard.ipynb
@@ -35,155 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../../data/bybit/DOGE_USDT-5m.json\n",
-      "type: <class 'numpy.int64'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>8.568200e+04</td>\n",
-       "      <td>85682.000000</td>\n",
-       "      <td>85682.000000</td>\n",
-       "      <td>85682.000000</td>\n",
-       "      <td>85682.000000</td>\n",
-       "      <td>8.568200e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>1.635483e+12</td>\n",
-       "      <td>0.212588</td>\n",
-       "      <td>0.213050</td>\n",
-       "      <td>0.212116</td>\n",
-       "      <td>0.212585</td>\n",
-       "      <td>9.097324e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>7.420322e+09</td>\n",
-       "      <td>0.062386</td>\n",
-       "      <td>0.062586</td>\n",
-       "      <td>0.062170</td>\n",
-       "      <td>0.062383</td>\n",
-       "      <td>1.873496e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.622630e+12</td>\n",
-       "      <td>0.108700</td>\n",
-       "      <td>0.109500</td>\n",
-       "      <td>0.105800</td>\n",
-       "      <td>0.108700</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.629056e+12</td>\n",
-       "      <td>0.163700</td>\n",
-       "      <td>0.164100</td>\n",
-       "      <td>0.163325</td>\n",
-       "      <td>0.163700</td>\n",
-       "      <td>1.539892e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>1.635483e+12</td>\n",
-       "      <td>0.208500</td>\n",
-       "      <td>0.208900</td>\n",
-       "      <td>0.208000</td>\n",
-       "      <td>0.208500</td>\n",
-       "      <td>3.815880e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.641909e+12</td>\n",
-       "      <td>0.254700</td>\n",
-       "      <td>0.255400</td>\n",
-       "      <td>0.253900</td>\n",
-       "      <td>0.254700</td>\n",
-       "      <td>9.365852e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.648335e+12</td>\n",
-       "      <td>0.442800</td>\n",
-       "      <td>0.445000</td>\n",
-       "      <td>0.438200</td>\n",
-       "      <td>0.442800</td>\n",
-       "      <td>7.516842e+07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          timestamp          open          high           low         close  \\\n",
-       "count  8.568200e+04  85682.000000  85682.000000  85682.000000  85682.000000   \n",
-       "mean   1.635483e+12      0.212588      0.213050      0.212116      0.212585   \n",
-       "std    7.420322e+09      0.062386      0.062586      0.062170      0.062383   \n",
-       "min    1.622630e+12      0.108700      0.109500      0.105800      0.108700   \n",
-       "25%    1.629056e+12      0.163700      0.164100      0.163325      0.163700   \n",
-       "50%    1.635483e+12      0.208500      0.208900      0.208000      0.208500   \n",
-       "75%    1.641909e+12      0.254700      0.255400      0.253900      0.254700   \n",
-       "max    1.648335e+12      0.442800      0.445000      0.438200      0.442800   \n",
-       "\n",
-       "             volume  \n",
-       "count  8.568200e+04  \n",
-       "mean   9.097324e+05  \n",
-       "std    1.873496e+06  \n",
-       "min    2.000000e+00  \n",
-       "25%    1.539892e+05  \n",
-       "50%    3.815880e+05  \n",
-       "75%    9.365852e+05  \n",
-       "max    7.516842e+07  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Test Data ##\n",
     "base_cur = \"USDT\"\n",
     "exch_cur = \"DOGE\"\n",
-    "symbol = '_'.join([exch_cur, base_cur])\n",
+    "symbol = ''.join([exch_cur, base_cur])\n",
     "timeframe = \"5m\"\n",
     "maxCandles = 500\n",
     "runUpCandles = 20\n",
